# SPDX-FileCopyrightText: 2024 perillamint <perillamint@silicon.moe>
# SPDX-FileCopyrightText: 2020-2022 Alex Grinman <me@alexgr.in>
#
# SPDX-License-Identifier: MIT

[workspace]
resolver = "2"

members = [
    "portalgun_lib",
    "portalgun",
    "portalgun_moon",
]

exclude = [
    "portalgun_proxy"
]

[profile.dev]
split-debuginfo = "unpacked"
