# SPDX-FileCopyrightText: 2023 perillamint <perillamint@silicon.moe>
# SPDX-FileCopyrightText: 2020-2022 Alex Grinman <me@alexgr.in>
#
# SPDX-License-Identifier: MIT

[package]
name = "portalgun"
description = "expose your local web server to the internet with a public url"
version = "0.2.4"
authors = ["Alex Grinman <alex@tunnelto.dev>", "perillamint <perillamint@silicon.moe>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/perillamint/portalgun"
readme = "../README.md"

[[bin]]
name = "portalgun"
path = "src/main.rs"

[dependencies]
portalgun_lib = { version = "0.2.2", path = "../portalgun_lib" }
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "^0.20", features = ["rustls-tls-native-roots"]}
tokio-rustls = "^0.24"
rustls-webpki = "^0.101"
tungstenite = { version = "^0.20", default-features = false, features = ["rustls-tls-native-roots"]}
lazy_static = "1.4.0"
pretty_env_logger = "0.5.0"
dirs = "5.0.1"
log = "^0.4.20"
human-panic = "^1.2.0"
clap = { version = "^4.4.0", features = ["derive"] }
colored = "2"
thiserror = "1.0"
indicatif = "0.15.0"
httparse = "1.8.0"
warp = "0.3"
bytes = "^1.5"
askama = { version = "0.12.0", features = ["serde-json"] }
chrono = { version = "^0.4", default-features = false, features = ["clock", "std", "wasmbind", "serde"] }
uuid = {version = "^1.4", features = ["serde", "v4"] }
hyper = "0.14"
hyper-rustls = "0.24"
http-body = "0.4.5"
serde_urlencoded = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "tokio-rustls"] }
cli-table = "0.4"
semver = "^1.0"
webpki-roots = "0.23"
url = { version = "^2.4", features = ["serde"] }

oauth2 = { version = "^4.4.2", features = ["rustls-tls"] }
