# SPDX-FileCopyrightText: 2023 perillamint <perillamint@silicon.moe>
# SPDX-FileCopyrightText: 2020-2022 Alex Grinman <me@alexgr.in>
#
# SPDX-License-Identifier: MIT

[package]
name = "portalgun_moon"
description = "expose your local web server to the internet with a public url"
version = "0.2.3"
authors = ["Alex Grinman <alex@tunnelto.dev>", "perillamint <perillamint@silicon.moe>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/perillamint/portalgun"
readme = "../README.md"

[[bin]]
name = "portalgun_moon"
path = "src/main.rs"

[dependencies]
portalgun_lib = { path = "../portalgun_lib" }
anyhow = "1.0"
warp = "0.3"
tokio = { version = "^1.32", features = ["full"] }
base64 = "^0.21.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "wasmbind", "serde"] }
pretty_env_logger = "0.5.0"
httparse = "1.8.0"
url = "^2.4.1"
thiserror = "1.0"
uuid = {version = "1.4", features = ["serde", "v4"] }
sha2 = "0.10"
dashmap = "^5.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "tokio-rustls"] }
trust-dns-resolver = "0.23"
hmac-sha256 = "1.1.7"
hex = "0.4.3"
rand = "0.8.5"
async-trait = "0.1.73"

jsonwebtoken = "8.3.0"
regex = "1.9.5"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"
