# SPDX-FileCopyrightText: 2023 perillamint <perillamint@silicon.moe>
# SPDX-FileCopyrightText: 2020-2022 Alex Grinman <me@alexgr.in>
#
# SPDX-License-Identifier: MIT

[package]
name = "tunnelto"
description = "expose your local web server to the internet with a public url"
version = "0.1.19"
authors = ["Alex Grinman <alex@tunnelto.dev>", "perillamint <perillamint@silicon.moe>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/agrinman/tunnelto"
readme = "../README.md"

[[bin]]
name = "tunnelto"
path = "src/main.rs"

[dependencies]
tunnelto_lib = { path = "../tunnelto_lib" }
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.19", features = ["rustls-tls-native-roots"]}
tokio-rustls = "0.24"
rustls-webpki = "0.100"
tungstenite = { version = "0.19", default-features = false, features = ["rustls-tls-native-roots"]}
lazy_static = "1.4.0"
pretty_env_logger = "0.5.0"
dirs = "5.0.1"
log = "0.4.17"
human-panic = "1.1.4"
clap = { version = "4.3.0", features = ["derive"] }
colored = "2"
thiserror = "1.0"
indicatif = "0.15.0"
httparse = "1.8.0"
warp = "0.3"
bytes = "1.4"
askama = { version = "0.12.0", features = ["serde-json"] }
chrono = "0.4.24"
uuid = {version = "1.3", features = ["serde", "v4"] }
hyper = "0.14"
hyper-rustls = "0.24"
http-body = "0.4.5"
serde_urlencoded = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
cli-table = "0.4"
semver = "0.11"
webpki-roots = "0.23"
url = { version = "2.3", features = ["serde"] }
