[package]
name = "tunnelto_lib"
description = "expose your local web server to the internet with a public url"
version = "0.1.19"
authors = ["Alex Grinman <alex@tunnelto.dev>", "perillamint <perillamint@silicon.moe>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/agrinman/tunnelto"
readme = "../README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
base64 = "0.21.0"
sha2 = "0.10"
