[package]
name = "tunnelto_server"
description = "expose your local web server to the internet with a public url"
version = "0.1.10"
authors = ["Alex Grinman <alex@tunnelto.dev>"]
edition = "2018"
license = "MIT"
repository = "https://tunnelto.dev"
readme = "../README.md"

[[bin]]
name = "tunnelto_server"
path = "src/main.rs"

[dependencies]
tunnelto_lib = { path = "../tunnelto_lib" }
warp = "0.3"
tokio = { version = "1.28", features = ["full"] }
base64 = "0.21.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
chrono = "0.4.24"
pretty_env_logger = "0.5.0"
httparse = "1.8.0"
url = "2.3.1"
thiserror = "1.0"
uuid = {version = "1.3", features = ["serde", "v4"] }
sha2 = "0.10"
dashmap = "5.4"
reqwest = { version = "0.11", features = ["json"] }
trust-dns-resolver = "0.22"
hmac-sha256 = "1.1.6"
hex = "0.4.3"
rand = "0.8.5"
async-trait = "0.1.68"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# auth handler
rusoto_core = "0.48"
rusoto_credential = "0.48"
